--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # 6️⃣ Download private Medium profile
+      # 6️⃣ Download private Medium profile ZIP
       - name: Download private profile
         run: |
           echo "Downloading private profile..."
@@ -60,19 +60,17 @@ jobs:
       - name: Install Playwright Chromium
         run: npx playwright install chromium
 
-      # 9️⃣ Run Medium Test Post with immediate screenshot capture
+      # 9️⃣ Run Medium test post
       - name: Run Medium Test Post
         env:
           PROFILE_PATH: ./profile
         run: |
           set -o pipefail
-          xvfb-run --auto-servernum --server-args="-screen 0 1280x800x24" node index.js || true
+          node index.js || exit 1
 
-      # 🔟 Upload Debug Artifacts regardless of failure
-      - name: Upload Debug Artifacts
+      # 🔟 Upload Screenshot & HTML Artifact
+      - name: Upload Screenshot & HTML Artifact
         uses: actions/upload-artifact@v4
         with:
           name: medium-error-artifacts
-          path: |
-            debug
-            screenshots
+          path: debug
