--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -8,80 +8,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
 
-      # 2️⃣ Install unzip
-      - name: Install unzip
-        run: sudo apt-get install -y unzip
+      - name: Install Chrome Stable
+        uses: browser-actions/setup-chrome@latest
 
-      # 3️⃣ Cache Node modules
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('package.json') }}
-          restore-keys: |
-            node-modules-
+      - name: Verify Chrome version
+        run: google-chrome --version
 
-      # 4️⃣ Cache Playwright browsers
-      - name: Cache Playwright browsers
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package.json') }}
-          restore-keys: |
-            playwright-browsers-${{ runner.os }}-
-
-      # 5️⃣ Setup Node.js
-      - name: Setup Node.js
+      - name: Install Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 6️⃣ Install dependencies
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      # 7️⃣ Download private Medium profile ZIP
-      - name: Download private profile
-        run: |
-          echo "Downloading private Medium profile..."
-          curl -L --fail \
-            -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
-            -H "Accept: application/octet-stream" \
-            "https://api.github.com/repos/justingerad05/mediumprofile/releases/assets/325795996" \
-            --output medium-profile.zip
+      - name: Run Medium Automation
+        run: node index.js
 
-      # 8️⃣ Unzip profile
-      - name: Unzip private profile
-        run: |
-          mkdir -p profile
-          unzip -o medium-profile.zip -d profile
-
-      # 9️⃣ Install Playwright Chromium
-      - name: Install Playwright Chromium
-        run: npx playwright install chromium
-
-      # 🔟 Install Playwright Ubuntu Dependencies
-      - name: Install Playwright Dependencies
-        run: npx playwright install-deps
-
-      # 1️⃣1️⃣ Run Medium test post
-      - name: Run Medium Test Post
-        env:
-          PROFILE_PATH: ./profile
-        run: |
-          set -o pipefail
-          node index.js || true
-
-      # 1️⃣2️⃣ Upload debug artifacts if failure
-      - name: Upload Debug Artifacts
+      - name: Upload Screenshots (for debugging)
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: medium-error-artifacts
-          path: debug/
+          name: screenshots
+          path: screenshots/
