--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Playwright Chromium
         run: npx playwright install chromium
 
-      - name: Download private profile
+      - name: Download private Medium profile
         run: |
           curl -L \
             -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
