--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -8,42 +8,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@latest
+      # 2️⃣ Cache Node modules
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            node-modules-
 
+      # 3️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Clean NPM cache
-        run: npm cache clean --force
-
+      # 4️⃣ Install dependencies (Playwright + Stealth)
       - name: Install dependencies
-        run: npm install --force
-
-      - name: Install Playwright Chromium
-        run: npx playwright install chromium
-
-      - name: Download private Medium profile
         run: |
+          npm ci
+          npm install playwright playwright-extra playwright-extra-plugin-stealth
+
+      # 5️⃣ Download private Medium profile ZIP
+      - name: Download private profile
+        run: |
+          echo "Downloading private profile..."
           curl -L \
             -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
             -H "Accept: application/octet-stream" \
             "https://api.github.com/repos/justingerad05/mediumprofile/releases/assets/325795996" \
             --output medium-profile.zip
 
+      # 6️⃣ Unzip profile
       - name: Unzip private profile
-        run: unzip -o medium-profile.zip -d profile
+        run: |
+          mkdir -p profile
+          unzip -o medium-profile.zip -d profile
 
-      - name: Run Test Post
+      # 7️⃣ Run Medium test post
+      - name: Run Medium Test Post
         env:
           PROFILE_PATH: ./profile
-        run: node test-post.js
+        run: |
+          node test-post.js
 
+      # 8️⃣ Upload debug artifacts in case of failures
       - name: Upload Debug Artifacts
         if: always()
         uses: actions/upload-artifact@v4
