--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -1,4 +1,4 @@
-name: Test Medium Login (Cloudflare Tunnel)
+name: Test Medium Login (Stable Tunnel)
 
 on:
   workflow_dispatch:
@@ -6,16 +6,20 @@ on:
 jobs:
   login:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 90
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      - name: Install Base Dependencies
         run: |
           sudo apt update
           sudo apt install -y xvfb x11vnc fluxbox websockify novnc
+
+      - name: Install Playwright + Chromium
+        run: |
+          npm init -y
           npm install playwright
           npx playwright install chromium
 
@@ -25,34 +29,45 @@ jobs:
           Xvfb :99 -screen 0 1920x1080x24 &
 
       - name: Start Window Manager
-        run: |
-          fluxbox &
+        run: fluxbox &
 
       - name: Start VNC Server
-        run: |
-          x11vnc -display :99 -nopw -forever -shared -rfbport 5901 &
+        run: x11vnc -display :99 -nopw -forever -shared -rfbport 5901 &
 
       - name: Start noVNC
         run: |
           websockify --web=/usr/share/novnc/ 6080 localhost:5901 &
+          sleep 3
 
       - name: Install Cloudflared
         run: |
           wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           sudo dpkg -i cloudflared-linux-amd64.deb
 
-      - name: Start Tunnel
+      - name: Start Stable Cloudflare Tunnel
         run: |
-          cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
+          echo "Starting tunnel..."
+          cloudflared tunnel --no-autoupdate run --url http://localhost:6080 > tunnel.log 2>&1 &
+          sleep 8
+          echo "Tunnel started."
 
-      - name: Wait for tunnel URL
+      - name: Show Tunnel URL
         run: |
-          sleep 10
-          echo "=========== CLOUD TUNNEL URL ==========="
-          grep -o "https://.*trycloudflare.com" tunnel.log
+          echo "=========== TUNNEL URL BELOW ==========="
+          grep -o "https://.*trycloudflare.com" tunnel.log || echo "Waiting for URL..."
           echo "========================================"
 
       - name: Start Chromium for Login
         run: |
           export DISPLAY=:99
           chromium --no-sandbox --user-data-dir=/home/runner/chrome-profile https://medium.com/m/signin &
+          sleep 5
+
+      - name: Keep Workflow Alive (So Tunnel Stays Active)
+        run: |
+          echo "Browser running. Do NOT close this Action."
+          echo "Leave this workflow open while you log in."
+          while true; do
+            echo "Still running..."
+            sleep 30
+          done
