--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -6,67 +6,37 @@ on:
 jobs:
   login:
     runs-on: ubuntu-latest
-    timeout-minutes: 90
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Base Dependencies
+      - name: Setup Cloudflared
         run: |
-          sudo apt update
-          sudo apt install -y xvfb x11vnc fluxbox websockify novnc
-
-      - name: Install Playwright + Chromium
-        run: |
-          npm init -y
-          npm install playwright
-          npx playwright install chromium
-
-      - name: Start Virtual Display
-        run: |
-          export DISPLAY=:99
-          Xvfb :99 -screen 0 1920x1080x24 &
-
-      - name: Start Window Manager
-        run: fluxbox &
-
-      - name: Start VNC Server
-        run: x11vnc -display :99 -nopw -forever -shared -rfbport 5901 &
-
-      - name: Start noVNC
-        run: |
-          websockify --web=/usr/share/novnc/ 6080 localhost:5901 &
-          sleep 3
-
-      - name: Install Cloudflared
-        run: |
-          wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+          wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           sudo dpkg -i cloudflared-linux-amd64.deb
 
-      - name: Start Stable Cloudflare Tunnel
+      - name: Start Cloudflare Tunnel
         run: |
           echo "Starting tunnel..."
-          cloudflared tunnel --no-autoupdate run --url http://localhost:6080 > tunnel.log 2>&1 &
-          sleep 8
-          echo "Tunnel started."
-
-      - name: Show Tunnel URL
-        run: |
+          cloudflared tunnel --url http://localhost:9222 --no-autoupdate --logfile tunnel.log > tunnel_output.log 2>&1 &
+          sleep 5
           echo "=========== TUNNEL URL BELOW ==========="
-          grep -o "https://.*trycloudflare.com" tunnel.log || echo "Waiting for URL..."
+          grep -o "https://[a-zA-Z0-9.-]*trycloudflare.com" tunnel_output.log || true
           echo "========================================"
 
-      - name: Start Chromium for Login
+      - name: Start chromium with debugging port
         run: |
           export DISPLAY=:99
-          chromium --no-sandbox --user-data-dir=/home/runner/chrome-profile https://medium.com/m/signin &
+          chromium --remote-debugging-port=9222 --no-sandbox \
+            --user-data-dir=/home/runner/chrome-profile \
+            https://medium.com/m/signin &
+
           sleep 5
 
-      - name: Keep Workflow Alive (So Tunnel Stays Active)
+      - name: Keep Action alive
         run: |
           echo "Browser running. Do NOT close this Action."
-          echo "Leave this workflow open while you log in."
+          echo "Leave this tab open while you log in through the tunnel URL."
           while true; do
             echo "Still running..."
             sleep 30
