--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -10,18 +10,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Start Chromium with Remote Debugging
+      - name: Start Chromium headless on 0.0.0.0
         run: |
           echo "Starting Chromium..."
           export DISPLAY=:99
-          chromium --headless --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 \
-            --no-sandbox --disable-gpu --user-data-dir=/home/runner/chrome-profile \
+
+          chromium --headless \
+            --remote-debugging-address=0.0.0.0 \
+            --remote-debugging-port=9222 \
+            --no-sandbox \
+            --disable-gpu \
+            --user-data-dir=/home/runner/chrome-profile \
             https://medium.com/m/signin &
 
-          # Wait for Chromium to boot and open debugging port
-          echo "Waiting for debug port..."
+          echo "Waiting for port 9222 to open..."
+
           for i in {1..30}; do
-            if nc -z localhost 9222; then
+            if nc -z 127.0.0.1 9222; then
               echo "Chromium debug port is ready!"
               break
             fi
@@ -29,8 +34,8 @@ jobs:
             sleep 1
           done
 
-          if ! nc -z localhost 9222; then
-            echo "❌ Chromium did not open port 9222. Exiting."
+          if ! nc -z 127.0.0.1 9222; then
+            echo "❌ Chromium never opened port 9222"
             exit 1
           fi
 
@@ -42,15 +47,24 @@ jobs:
       - name: Start Cloudflare Tunnel
         run: |
           echo "Starting Cloudflare Tunnel..."
-          cloudflared tunnel --url http://localhost:9222 --no-autoupdate --logfile tunnel.log > tunnel_output.log 2>&1 &
+
+          # ⚠️ FIX FOR YOUR ERROR
+          # Force Cloudflare to treat origin as an IP, not a hostname
+          cloudflared tunnel \
+            --url http://127.0.0.1:9222 \
+            --no-autoupdate \
+            --logfile tunnel.log \
+            2>&1 &
+
           sleep 8
+
           echo "=========== TUNNEL URL BELOW ==========="
-          grep -o "https://[a-zA-Z0-9.-]*trycloudflare.com" tunnel_output.log || echo "❌ No tunnel URL found yet."
+          grep -o "https://[a-zA-Z0-9.-]*trycloudflare.com" tunnel.log || echo "❌ No tunnel URL yet"
           echo "========================================"
 
-      - name: Keep Alive
+      - name: Keep alive
         run: |
-          echo "Browser live! Use tunnel URL above to log in."
+          echo "Browser is LIVE. Use the tunnel URL to log in."
           while true; do
             echo "Still running..."
             sleep 30
