--- a/.github/workflows/medium-post.yml
+++ b/.github/workflows/medium-post.yml
@@ -11,9 +11,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install Playwright Browsers
         run: |
-          npm ci
           npx playwright install --with-deps
 
       - name: Login with cookies
@@ -26,7 +25,7 @@ jobs:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
         run: npm run test-post
 
-      - name: Upload screenshots artifact
+      - name: Upload screenshots
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
