--- a/.github/workflows/medium-post.yml
+++ b/.github/workflows/medium-post.yml
@@ -1,4 +1,4 @@
-name: Medium Auto Post (final)
+name: Medium Auto Post
 
 on:
   workflow_dispatch:
@@ -8,33 +8,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Install Node dependencies properly
+      # 2️⃣ Setup Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      # 3️⃣ Install dependencies
       - name: Install dependencies
-        run: |
-          npm install
-          npx playwright install --with-deps
+        run: npm install
 
-      # 3️⃣ Run login using secret cookies
-      - name: Load Medium profile (using cookies)
+      # 4️⃣ Install Playwright browsers
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      # 5️⃣ Run login script
+      - name: Login to Medium
+        run: npm run login
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-        run: |
-          node scripts/loadProfile.js
 
-      # 4️⃣ Run the test post
-      - name: Create test Medium post
+      # 6️⃣ Run test post script
+      - name: Test post on Medium
+        run: npm run test-post
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-        run: |
-          node scripts/testPost.js
 
-      # 5️⃣ Upload Playwright screenshots as artifacts
+      # 7️⃣ Optional: Run postArticle script
+      # Uncomment if you want to auto-fill an article
+      #- name: Post article on Medium
+      #  run: npm run post-article
+      #  env:
+      #    MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
+
+      # 8️⃣ Upload screenshots as artifacts (for debugging)
       - name: Upload screenshots
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-screenshots
+          name: medium-screenshots
           path: screenshots/
