--- a/.github/workflows/medium-post.yml
+++ b/.github/workflows/medium-post.yml
@@ -8,44 +8,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
-      # 3️⃣ Install dependencies
+      # Use npm install instead of npm ci
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ Install Playwright browsers
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      # 5️⃣ Run login script
       - name: Login to Medium
         run: npm run login
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
 
-      # 6️⃣ Run test post script
       - name: Test post on Medium
         run: npm run test-post
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
 
-      # 7️⃣ Optional: Run postArticle script
-      # Uncomment if you want to auto-fill an article
-      #- name: Post article on Medium
-      #  run: npm run post-article
-      #  env:
-      #    MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-
-      # 8️⃣ Upload screenshots as artifacts (for debugging)
       - name: Upload screenshots
         uses: actions/upload-artifact@v4
         with:
