--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "login": "node scripts/loadProfile.js",
     "test-post": "node scripts/testPost.js",
     "post-article": "node scripts/postArticle.js"
+  },
+  "dependencies": {
+    "playwright": "^1.56.1"
   }
 }
