--- a/.github/workflows/medium-post.yml
+++ b/.github/workflows/medium-post.yml
@@ -21,10 +21,10 @@ jobs:
 
       - name: Test Post
         run: npm run test-post
-        continue-on-error: true  # allow artifact upload even if test-post fails
+        continue-on-error: true  # allows artifact upload even if test-post fails
 
       - name: Upload screenshots
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # updated to v4
         with:
           name: medium-screenshots
           path: screenshots/
